Cleaned more Sonar findings.